Update photo site

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         <!-- 新人照片 -->
         <section class="text-center py-8">
-            <img src="https://github.com/a807291991/wedding1129/blob/main/S__92807185_0.jpg?raw=true" alt="新人合照" class="couple-photo mx-auto">
+            <img src="https://github.com/a807291991/wedding1129/blob/main/S__92807185_0.jpg" alt="新人合照" class="couple-photo mx-auto">
             <p class="text-lg sm:text-xl font-semibold text-gray-700">
                 我們誠摯地邀請您<br>
                 一同分享這份喜悅與幸福
