--- a/index.html
+++ b/index.html
@@ -176,12 +176,7 @@
 
             <!-- 地圖 -->
             <div class="map-container">
-                <iframe
-                    src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.0234607352195!2d120.39063571049438!3d22.503302935421985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3471e27c574515df%3A0x78da842d76260e27!2z5byY5bee5ZWG5YuZ5peF6aSo!5e0!3m2!1szh-TW!2stw!4v1752644580232!5m2!1szh-TW!2stw
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                ></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.0234607352195!2d120.39063571049438!3d22.503302935421985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3471e27c574515df%3A0x78da842d76260e27!2z5byY5bee5ZWG5YuZ5peF6aSo!5e0!3m2!1szh-TW!2stw!4v1752644580232!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <!-- RSVP按鈕 -->
